chore: update Jakarta / JAXB libraries